# scanner

./: .editorconfig  .gitignore  CMakeLists.txt  acp.sh  build.sh  color.sh  makefile  makefile.2
.config/: config.txt  default.txt  pcxx.config  state_config.txt  streamy.txt  test.txt
calc/: calc.y
cmake/: CMakeLists.txt  CMakeLists2.txt  CMakePresets.json  build.sh
doc/: acp.sh  launch.bak.json  notes.txt  tasks.bak.json  token_regex.txt
edit/: 2.txt  gtokens.txt
man/: scanner.1
src/: ConsoleLogger.h  Lexer.cpp  Lexer.h  Lexer.hpp  ast.h  bash_color.h  bash_color.hpp  calc.y  compiler.cpp  compiler.hpp  config.hpp  constants.hpp  cterminals.hpp  def.txt  dirver.hh  driver.cc  fileio.cpp  fileio.hpp  lex.c  lex.cpp  lex.hpp  lex.l  lex_config.hpp  main_t1.c  mylibrary.h  mylibrary_impl.cpp  parser.y  pcxx.yy  pparser.yy  regex.hpp  rpcalc.y  scanner.c  scanner.cpp  scanner.h  scanner.hpp  snip.txt  stable.c  streamy.cpp  symtab.c  test.php  (+4 more)
src/bison_nolex/: Lexer.cpp  Lexer.hpp  ast.h  calc.y  lexer.c  lexer.h  makefile  parser.y  scanner.cpp
src/parser/: bash_color.h  fileio.cpp  lex.l  makefile  parsercxx.yy  streamy.cpp  symtab.h  utility.cpp  utility.hpp
src/tools/: base64.c  base64.h  conf.sh  def2.txt  lex.hpp  m.asm  m2.asm  main_test.c  symtable.cpp  symtable.hpp
test/: a.txt  config.txt  config_match.txt  scan.txt  sl.txt  test.txt  test2.txt  tok.txt
test/sed/: tokout.txt
